[B][COLOR red]Update - v3.6.3 - May 6, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Integration with new "Play from Here" option in Global
    Context Menu. See "What's New" for more info in addon.[/I]
[COLOR yellow]--[/COLOR][I] Code changes per cProfile function testing for speed
    inprovements. Movie menus should now load faster
    and more to follow.[/I]

[B][COLOR red]Update - v3.6.2 - April 29, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Code changes for new integration with Venom global
    context menu changes.[/I]
[COLOR yellow]--[/COLOR][I] Changed trakt history to now follow "Progress sorting"
    method from settings.[/I]

[B][COLOR red]Update - v3.6.1 - April 14, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed Calendar show titles.[/I]
[COLOR yellow]--[/COLOR][I] fixed typo with RD uncached torrent removal
    using PM setting.[/I]
[COLOR yellow]--[/COLOR][I] fixed issue with RD uncached torrent check
    failing due to RD response converting hashes to
    lower case.[/I]
[COLOR yellow]--[/COLOR][I] fixed Trakt Progress episode sort issue from
    Trakt response.[/I]

[B][COLOR red]Update - v3.6.0 - April 2, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Compressed artwork to lessen footprint.[/I]
[COLOR yellow]--[/COLOR][I] Added new setting to enable or disable Calendar
    (TVMaze) extended meta.  When disabled(default)
    the Calendar list items will now load faster without
    the extra meta and artwork.[/I]
[COLOR yellow]--[/COLOR][I] resolveURL is now maintained by gural so
    repo has been updated.[/I]

[B][COLOR red]Update - v3.5.9 - March 30, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Removed resolveURL notification from previous
    update.[/I]
[COLOR yellow]--[/COLOR][I] Updated bookmarks caching method to now also
    record show name and year for better tracking of
    progress indicators.  This requires you to clear old
    bookmarks for the new update to be in use.[/I]

[B][COLOR red]Update - v3.5.8 - March 29, 2020[/COLOR][/B]