@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="3.6.3" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="3.6.4" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
@@ -38,11 +38,8 @@
 			<screenshot>resources/screenshots/screenshot003.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v3.6.2 - April 29, 2020[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Code changes for new integration with Venom global
-    context menu changes.[/I]
-[COLOR yellow]--[/COLOR][I] Changed trakt history to now follow "Progress sorting"
-    method from settings.[/I]
+[B][COLOR red]Update - v3.6.4 - May 8, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed typo in downloader module.[/I]
 		</news>
 	</extension>
 </addon>
