@@ -1,3 +1,6 @@
+[B][COLOR red]Update - v3.6.4 - May 8, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed typo in downloader module.[/I]
+
 [B][COLOR red]Update - v3.6.3 - May 6, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Integration with new "Play from Here" option in Global
     Context Menu. See "What's New" for more info in addon.[/I]
